--- a/packages.config
+++ b/packages.config
@@ -22,6 +22,7 @@
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="toastr" version="2.1.1" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
   <package id="Xceed.Document.NET" version="2.5.23177.2123" targetFramework="net48" />
   <package id="Xceed.Pdf" version="2.5.23177.2123" targetFramework="net48" />
