--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
+  <package id="DocX" version="2.4.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="EPPlus" version="4.5.3.1" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
@@ -24,7 +25,4 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="toastr" version="2.1.1" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
-  <package id="Xceed.Document.NET" version="2.5.23177.2123" targetFramework="net48" />
-  <package id="Xceed.Pdf" version="2.5.23177.2123" targetFramework="net48" />
-  <package id="Xceed.Words.NET" version="2.5.23177.2123" targetFramework="net48" />
 </packages>
