--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -288,20 +288,12 @@
     <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\css\bootstrap.rtl.css" />
     <Content Include="Content\css\bootstrap.rtl.min.css" />
-    <Content Include="Content\font_bootstrap-icons.css" />
     <Content Include="Content\icon\edit.svg" />
     <Content Include="Content\images\cntt.jpg" />
     <Content Include="Content\images\liencaphdu.png" />
     <Content Include="Content\images\logo-hdu.png" />
     <Content Include="Content\images\profile-1.png" />
     <Content Include="Content\images\sptin.jpg" />
-    <Content Include="Content\images\thongtintv.jpg" />
-    <Content Include="Content\images\timline.jpg" />
-    <Content Include="Content\images\ts001.png" />
-    <Content Include="Content\images\ts002.png" />
-    <Content Include="Content\images\ts01.jpg" />
-    <Content Include="Content\images\ts02.jpg" />
-    <Content Include="Content\images\ts03.jpg" />
     <Content Include="Content\images\ttdpt.jpg" />
     <Content Include="Content\images\tttvts2023.jpg" />
     <Content Include="Content\images\tttvts2023l.jpg" />
@@ -500,22 +492,16 @@
     <Content Include="Areas\Admin\Views\TruongLienCaps\DeleteTh.cshtml" />
     <Content Include="Areas\Admin\Views\TruongLienCaps\EditTh.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\test.cshtml" />
-    <Content Include="Areas\Admin\Views\test3\Index.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqDgnl_hs_view_OK.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtKQTthpt_hs_viewOK.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtHocBa_hs_viewOK.cshtml" />
-    <Content Include="Areas\Admin\Views\HocVienDangKys\AdminCreateHocVien.cshtml" />
+    <Content Include="Areas\Admin\Views\HocVienDangKys\AdminCreateHocVien_Full.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqCcnn.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqCcnn_hs_view.cshtml" />
     <Content Include="Areas\Admin\Views\HocVienDangKys\DsHvDangKy_Update.cshtml" />
     <Content Include="Areas\Admin\Views\HocVienDangKys\AdminUpdateHocVien.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens1\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens1\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens1\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens1\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens1\Index.cshtml" />
-    <Content Include="Content\fonts\bootstrap-icons.woff" />
-    <Content Include="Content\fonts\bootstrap-icons.woff2" />
+    <Content Include="Areas\Admin\Views\HocVienDangKys\AdminCreateHocVien.cshtml" />
+    <Content Include="Areas\Admin\Views\HocVienDangKys\AdminUpdateHocVien_Full.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
